neo/manifests/neo/05-middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth-token
  namespace: neo
spec:
  forwardAuth:
    address: http://neo-token.neo.svc.cluster.local:80/internal/verify-token
    authResponseHeaders:
      - Organization-Id
      - Cluster-Id

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: neo
spec:
  stripPrefix:
    prefixes:
      - /organization
      - /topology
      - /cluster
      - /token
      - /notification
      - /alert
      - /certificates
      - /metrics
      - /invitation
      - /check
      - /gslb
