neo/manifests/neo/01-neo-organization-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo-organization
  namespace: neo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo-organization
  template:
    metadata:
      labels:
        app: neo-organization
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: neo-organization
          image: gcr.io/traefiklabs/neo-organization-service:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
              httpGet:
                port: 80
                path: /ready
              initialDelaySeconds: 5
              periodSeconds: 5
              failureThreshold: 2
          args:
            - serve
            - --addr=:80
            - --mongodb-uri=mongodb://admin:admin@mongodb.mongo.svc.cluster.local:27017/organizations?authSource=admin
---
apiVersion: v1
kind: Service
metadata:
  name: neo-organization
  namespace: neo
  labels:
    app: neo-organization
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: neo-organization
  selector:
    app: neo-organization
