neo/manifests/neo/01-neo-topology-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo-topology
  namespace: neo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo-topology
  template:
    metadata:
      labels:
        app: neo-topology
        version: "v1"
        k8s-app: neo-topology
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: neo-topology
          image: gcr.io/traefiklabs/neo-topology:latest
          imagePullPolicy: Always
          args:
            - serve
            - --listen-addr=:80
            - --git-proxy-host=platform.docker.localhost

---
apiVersion: v1
kind: Service
metadata:
  name: neo-topology
  namespace: neo
  labels:
    app: neo-topology
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: neo-topology
  selector:
    app: neo-topology
