neo/manifests/neo/02-neo-notification.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo-notification
  namespace: neo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo-notification
  template:
    metadata:
      labels:
        app: neo-notification
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: neo-notification
          image: gcr.io/traefiklabs/neo-notification:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve
            - --addr=:80
---
apiVersion: v1
kind: Service
metadata:
  name: neo-notification
  namespace: neo
  labels:
    app: neo-notification
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: neo-notification
  selector:
    app: neo-notification
