neo/manifests/neo/01-neo-ui.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo-ui
  namespace: neo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo-ui
  template:
    metadata:
      labels:
        app: neo-ui
        version: "v1"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: neo-ui
          image: gcr.io/traefiklabs/neo-ui:latest
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: neo-ui
  namespace: neo
  labels:
    app: neo-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      name: neo-ui
  selector:
    app: neo-ui

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: neo-ui
  namespace: neo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`webapp.docker.localhost`)
      services:
        - name: neo-ui
          port: 80
