neo/manifests/neo/02-neo-metrics.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo-metrics
  namespace: neo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo-metrics
  template:
    metadata:
      labels:
        app: neo-metrics
        version: "v1"
        k8s-app: neo-metrics
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: neo-metrics
          image: gcr.io/traefiklabs/neo-metrics:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve
            - --addr=:80
            - --mongo-uri=mongodb://admin:admin@mongodb.mongo.svc.cluster.local:27017/metrics?authSource=admin

---
apiVersion: v1
kind: Service
metadata:
  name: neo-metrics
  namespace: neo
  labels:
    app: neo-metrics
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: neo-metrics
    - port: 40000
      targetPort: 40000
      name: neo-metrics-debug
  selector:
    app: neo-metrics

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metrics-agent-tls
  namespace: neo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Path(`/agent/data`) || Path(`/agent/metrics`))
      services:
        - name: neo-metrics
          port: 80
      middlewares:
        - name: auth-token
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metrics-agent
  namespace: neo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Path(`/agent/data`) || Path(`/agent/metrics`))
      services:
        - name: neo-metrics
          port: 80
      middlewares:
        - name: auth-token

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metrics-external-tls
  namespace: neo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/metrics/external`)
      services:
        - name: neo-metrics
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metrics-external
  namespace: neo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/metrics/external`)
      services:
        - name: neo-metrics
          port: 80
      middlewares:
        - name: stripprefix
