neo/manifests/neo/02-neo-organization.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo-organization
  namespace: neo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo-organization
  template:
    metadata:
      labels:
        app: neo-organization
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: neo-organization
          image: gcr.io/traefiklabs/neo-organization-service:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
              httpGet:
                port: 80
                path: /ready
              initialDelaySeconds: 5
              periodSeconds: 5
              failureThreshold: 2
          args:
            - serve
            - --addr=:80
            - --mongodb-uri=mongodb://admin:admin@mongodb.mongo.svc.cluster.local:27017/organizations?authSource=admin
---
apiVersion: v1
kind: Service
metadata:
  name: neo-organization
  namespace: neo
  labels:
    app: neo-organization
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: neo-organization
    - port: 40000
      targetPort: 40000
      name: neo-organization-debug
  selector:
    app: neo-organization

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: organization-external-tls
  namespace: neo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/organization/external`)
      services:
        - name: neo-organization
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: organization-external
  namespace: neo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/organization/external`)
      services:
        - name: neo-organization
          port: 80
      middlewares:
        - name: stripprefix

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: organization-auth0-tls
  namespace: neo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/auth0`)
      services:
        - name: neo-organization
          port: 80
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: organization-auth0
  namespace: neo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/auth0`)
      services:
        - name: neo-organization
          port: 80
