neo/manifests/neo/02-neo-token.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neo-token
  namespace: neo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neo-token
  template:
    metadata:
      labels:
        app: neo-token
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "80"
    spec:
      imagePullSecrets:
        - name: gcr-access-token
      containers:
        - name: neo-token
          image: gcr.io/traefiklabs/neo-token:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              port: 80
              path: /live
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              port: 80
              path: /ready
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 2
          args:
            - serve
            - --addr=:80
            - --mongodb-uri=mongodb://admin:admin@mongodb.mongo.svc.cluster.local:27017/tokens?authSource=admin
---
apiVersion: v1
kind: Service
metadata:
  name: neo-token
  namespace: neo
  labels:
    app: neo-token
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: neo-token
    - port: 40000
      targetPort: 40000
      name: neo-token-debug
  selector:
    app: neo-token

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: token-internal-tls
  namespace: neo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/token/internal`)
      services:
        - name: neo-token
          port: 80
      middlewares:
        - name: stripprefix
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: organization-token
  namespace: neo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && PathPrefix(`/token/internal`)
      services:
        - name: neo-token
          port: 80
      middlewares:
        - name: stripprefix
