neo/manifests/neo/04-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: platform
  namespace: neo
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Path(`/agent/data`) || Path(`/agent/metrics`))
      services:
        - name: neo-metrics
          port: 80
      middlewares:
        - name: auth-token
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Headers(`Neo-Path`, `/token`) || PathPrefix(`/token`))
      services:
        - name: neo-token
          port: 80
      middlewares:
        - name: stripprefix
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Headers(`Neo-Path`, `/cluster`) || PathPrefix(`/cluster`))
      services:
        - name: neo-cluster
          port: 80
      middlewares:
        - name: stripprefix
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Headers(`Neo-Path`, `/alert`) || PathPrefix(`/alert`))
      services:
        - name: neo-alert
          port: 80
      middlewares:
        - name: stripprefix
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Headers(`Neo-Path`, `/certificates`) || PathPrefix(`/certificates`))
      services:
        - name: neo-certificates
          port: 80
      middlewares:
        - name: stripprefix
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Headers(`Neo-Path`, `/notification`) || PathPrefix(`/notification`))
      services:
        - name: neo-notification
          port: 80
      middlewares:
        - name: stripprefix
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Headers(`Neo-Path`, `/topology`) || PathPrefix(`/topology`))
      services:
        - name: neo-topology
          port: 80
      middlewares:
        - name: stripprefix
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Headers(`Neo-Path`, `/organization`) || PathPrefix(`/organization`))
      services:
        - name: neo-organization
          port: 80
      middlewares:
        - name: stripprefix
    - kind: Rule
      match: Host(`platform.docker.localhost`)
      services:
        - name: github
          passHostHeader: false
          port: 443
      middlewares:
        - name: auth
        - name: github-token

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: platform-tls
  namespace: neo
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Path(`/agent/data`) || Path(`/agent/metrics`))
      services:
        - name: neo-metrics
          port: 80
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Headers(`Neo-Path`, `/topology`) || PathPrefix(`/topology`))
      services:
        - name: neo-topology
          port: 80
      middlewares:
        - name: stripprefix
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Headers(`Neo-Path`, `/alert`) || PathPrefix(`/alert`))
      services:
        - name: neo-alert
          port: 80
      middlewares:
        - name: stripprefix
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Headers(`Neo-Path`, `/certificates`) || PathPrefix(`/certificates`))
      services:
        - name: neo-certificates
          port: 80
      middlewares:
        - name: stripprefix
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Headers(`Neo-Path`, `/notification`) || PathPrefix(`/notification`))
      services:
        - name: neo-notification
          port: 80
      middlewares:
        - name: stripprefix
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Headers(`Neo-Path`, `/token`) || PathPrefix(`/token`))
      services:
        - name: neo-token
          port: 80
      middlewares:
        - name: stripprefix
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Headers(`Neo-Path`, `/cluster`) || PathPrefix(`/cluster`))
      services:
        - name: neo-cluster
          port: 80
      middlewares:
        - name: stripprefix
    - kind: Rule
      match: Host(`platform.docker.localhost`) && (Headers(`Neo-Path`, `/organization`) || PathPrefix(`/organization`))
      services:
        - name: neo-organization
          port: 80
      middlewares:
        - name: stripprefix
    - kind: Rule
      match: Host(`platform.docker.localhost`)
      services:
        - name: github
          passHostHeader: false
          port: 443
      middlewares:
        - name: auth
        - name: github-token
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth-token
  namespace: neo
spec:
  forwardAuth:
    address: http://neo-token.neo.svc.cluster.local:80/internal/verify-token
    authResponseHeaders:
      - Organization-Id
      - Cluster-Id

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: auth
  namespace: neo
spec:
  forwardAuth:
    address: http://neo-topology.neo.svc.cluster.local:80/internal/auth
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
  namespace: neo
spec:
  stripPrefix:
    prefixes:
      - /organization
      - /topology
      - /cluster
      - /token
      - /notification
      - /alert
      - /certificates

---
apiVersion: v1
kind: Service
metadata:
  name: github
  namespace: neo
spec:
  type: ExternalName
  externalName: github.com
